--- a/.gitignore
+++ b/.gitignore
@@ -300,3 +300,6 @@ fabric.properties
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,pycharm,flask
+
+uploads/*
+!uploads/dummy.txt
